# style-ngp

./: .gitmodules  README.md  _config.yml  environment.yaml  index.html  pyproject.toml
autoencoder/: autoencoder_model.py  datasets.py  train.py
data/: example_registration.json
data/datasets/0_110_cat5_2.0/: transforms.json
data/datasets/0_201_cat5_2.0/: transforms.json
data/datasets/0_207_cat5_2.0/: transforms.json
data_generation/: generate_dataset.py  generate_gt.py  generate_targets_and_inits.py  manipulate_target.py  nerf_coords_transform.py  pose_eval.py  synthetic_target_eval.py  targets_single_init_hack.py  util.py  utils.py
eval/: compute_psnr.py  generate_targets_and_inits.py  nerf_coords_transform.py  pose_eval.py  pose_registration.py  synthetic_target_eval.py  utils.py
static/css/: index.css
static/js/: index.js
style_ngp/: field_components.py  generate_dataset.py  style_ngp_config.py  style_ngp_field.py  style_ngp_model.py  style_ngp_pipeline.py  template_pipeline.py  util.py  utils.py
