[project]
name = "style_ngp"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["style_ngp*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
method-template = 'style_ngp.style_ngp_config:style_ngp'
